--- a/app/views/appeal/full/v5/prepare-appeal/appellant-names.html
+++ b/app/views/appeal/full/v5/prepare-appeal/appellant-names.html
@@ -34,7 +34,7 @@
             text: 'Applicant 1'
           },
           value: {
-            html: (data['new-appellant-full-name'] or 'Jan Fisher')
+            html: (data['new-appellant-first-name'] or 'Jan')+' '+(data['new-appellant-last-name'] or 'Fisher')
           },
           actions: {
             items: [
