Link to dashboard on confirmation screen

--- a/app/views/appeal/full/v5/confirmation.html
+++ b/app/views/appeal/full/v5/confirmation.html
@@ -30,7 +30,7 @@
 
         {{ govukPanel({
           titleHtml: title,
-          html: "Your appeal reference <br><strong>0123456</strong>"
+          html: "Appeal reference number <br><strong>0123456</strong>"
         }) }}
 
       {% endif %}
@@ -43,14 +43,28 @@
         html: '<p class="govuk-body">You need to send a copy of your appeal to the local planning authority.</p>'
       }) }}
 
-      <p class="govuk-body">If you need to contact us, include your planning appeal reference number.</p>
+      <p class="govuk-body">
+        If you need to contact us, include your appeal reference number.
+      </p>
 
-      <h2 class="govuk-heading-m">What happens next</h2>
-
-      <p class="govuk-body">We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.</p>
+      <h2 class="govuk-heading-m">
+        What happens next
+      </h2>
 
       <p class="govuk-body">
-        <a href="#0">What did you think of this service?</a> (takes 30 seconds)
+        We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.
+      </p>
+
+      <p class="govuk-body govuk-!-margin-bottom-9">
+        <a href="/appeal/more-than-one-appeal/v5/your-appeals" class="govuk-link govuk-link--no-visited-state">
+          View your appeals
+        </a>
+      </p>
+
+      <p class="govuk-body">
+        <a href="#0">
+          What did you think of this service?
+        </a> (takes 30 seconds)
       </p>
 
     </div>
