--- a/app/views/appeal/full/v5/task-list.html
+++ b/app/views/appeal/full/v5/task-list.html
@@ -11,6 +11,14 @@
     {
       href: 'declaration',
       text: 'Skip to declaration'
+    },
+    {
+      href: 'confirmation?integration=',
+      text: 'Skip to confirmation (Horizon version)'
+    },
+    {
+      href: 'confirmation?integration=yes',
+      text: 'Skip to confirmation (post-integration)'
     }
   ]
 %}
