Application submission date

--- a/app/views/appeal/full/v5/prepare-appeal/application-date.html
+++ b/app/views/appeal/full/v5/prepare-appeal/application-date.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What was the date of application?' %}
+{% set title = 'What date did you submit your planning application?' %}
 
 {% block questions %}
 
