--- a/app/views/appeal/full/v5/task-list__prepare.html
+++ b/app/views/appeal/full/v5/task-list__prepare.html
@@ -5,11 +5,11 @@
   <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/appellant-check" aria-describedby="company-details-1-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/appellant-check" aria-describedby="your-details-status">
           Your details
         </a>
       </div>
-      <div class="govuk-task-list__status" id="company-details-2-status">
+      <div class="govuk-task-list__status" id="your-details-status">
         {% if data['your-details-complete'] %}
         <!-- <strong class="govuk-tag govuk-tag--green"> -->
           Completed
@@ -29,16 +29,18 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/address" aria-describedby="company-details-2-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/address" aria-describedby="site-details-hint site-details-status">
           Site details
         </a>
         <div id="company-details-3-hint" class="govuk-task-list__hint">
           Location, ownership and access
         </div>
       </div>
-      <div class="govuk-task-list__status" id="company-details-2-status">
+      <div class="govuk-task-list__status" id="site-details-status">
         {% if data['site-details-complete'] %}
+        <!-- <strong class="govuk-tag govuk-tag--green"> -->
           Completed
+        <!-- </strong> -->
         {% else %}
           {% if data['site-details-started'] %}
           <strong class="govuk-tag govuk-tag--light-blue">
@@ -54,14 +56,14 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/application-reference" aria-describedby="company-details-4-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/application-reference" aria-describedby="your-application-hint your-application-status">
           Your application
         </a>
-        <div id="company-details-3-hint" class="govuk-task-list__hint">
+        <div id="your-application-hint" class="govuk-task-list__hint">
           Reference number and description of development
         </div>
       </div>
-      <div class="govuk-task-list__status" id="company-details-4-status">
+      <div class="govuk-task-list__status" id="your-application-status">
         {% if data['your-application-complete'] %}
           Completed
         {% else %}
@@ -79,14 +81,14 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/procedure" aria-describedby="company-details-3-hint company-details-3-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/procedure" aria-describedby="your-appeal-hint your-appeal-status">
           Your appeal
         </a>
         <div id="company-details-3-hint" class="govuk-task-list__hint">
           Appeal procedure and statement
         </div>
       </div>
-      <div class="govuk-task-list__status" id="company-details-3-status">
+      <div class="govuk-task-list__status" id="your-appeal-status">
         {% if data['your-appeal-complete'] %}
           Completed
         {% else %}
