--- a/app/views/appeal/full/v5/prepare-appeal/other-appeal-reference.html
+++ b/app/views/appeal/full/v5/prepare-appeal/other-appeal-reference.html
@@ -1,9 +1,9 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Enter an appeal reference number' %}
+{% set title = 'Enter the appeal reference number' %}
 
 {% block questions %}
-  
+
   {{ govukInput({
     label: {
       text: title,
@@ -12,7 +12,7 @@
     },
     classes: "govuk-input--width-10",
     hint: {
-      text: "You can add more appeals later if there is more than one nearby"
+      html: "<span class='govuk-body'>Enter the reference number from the local planning authority.</span><br><br>For example, 0221532."
     },
     id: "other-appeal-reference",
     name: "other-appeal-reference",
