--- a/app/views/appeal/full/v5/prepare-appeal/other-appeals.html
+++ b/app/views/appeal/full/v5/prepare-appeal/other-appeals.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Nearby appeal added' %}
+{% set title = 'You’ve added a linked appeal' %}
 
 {% set prototypeLinks = [
   {
