S78 content updates + file/s content

--- a/app/views/appeal/full/v5/upload-documents/costs.html
+++ b/app/views/appeal/full/v5/upload-documents/costs.html
@@ -26,7 +26,7 @@
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
