--- a/app/views/appeal/full/v5/upload-documents/design-access.html
+++ b/app/views/appeal/full/v5/upload-documents/design-access.html
@@ -13,7 +13,7 @@
       name: 'design-access',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload a file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
@@ -22,7 +22,7 @@
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
