--- a/app/views/appeal/full/v5/upload-documents/planning-obligation.html
+++ b/app/views/appeal/full/v5/upload-documents/planning-obligation.html
@@ -15,7 +15,7 @@
       name: 'planning-obligation',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
@@ -24,7 +24,7 @@
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
