--- a/app/views/appeal/full/v5/upload-documents/description-of-development-agreement.html
+++ b/app/views/appeal/full/v5/upload-documents/description-of-development-agreement.html
@@ -17,7 +17,7 @@
       name: 'description-change-agreement',
       classes: 'moj-multi-file-upload__input',
       label: {
-        text: 'Upload a file',
+        text: 'Upload files',
         classes: 'govuk-label--m'
       },
       hint: {
@@ -26,7 +26,7 @@
     }) }}
 
     {{govukButton({
-      text: 'Upload file',
+      text: 'Upload files',
       classes: 'govuk-button--secondary moj-multi-file-upload__button'
     })}}
   {% endset %}
