--- a/app/views/appeal/full/v5/upload-documents/design-access-check.html
+++ b/app/views/appeal/full/v5/upload-documents/design-access-check.html
@@ -3,16 +3,30 @@
 {% set title = 'Did you submit a design and access statement with your application?' %}
 
 {% block questions %}
+
+  {% call govukFieldset({
+    legend: {
+    html: title,
+    classes: 'govuk-fieldset__legend--l',
+    isPageHeading: true
+    }
+  }) %}
+
+  <p class="govuk-body">
+    A design and access statement explains how:
+  </p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>
+      the development is suitable for the site and its setting
+    </li>
+    <li>
+      you can access the development
+    </li>
+  </ul>
+
   {{ govukRadios({
     idPrefix: 'design-access-check',
     name: 'design-access-check',
-    fieldset: {
-      legend: {
-        html: title,
-        classes: 'govuk-fieldset__legend--l',
-        isPageHeading: true
-      }
-    },
     items: [
       {
         html: 'Yes',
@@ -26,4 +40,7 @@
       }
     ]
   }) }}
+
+  {% endcall %}
+
 {% endblock %}
