Visible from a public road

--- a/app/views/appeal/full/v5/prepare-appeal/site-visibility.html
+++ b/app/views/appeal/full/v5/prepare-appeal/site-visibility.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Is the subject of the appeal visible from a public road or footpath?' %}
+{% set title = 'Will an inspector need to access your land or property?' %}
 
 {% block questions %}
   {% set detailsHTML %}
@@ -27,7 +27,7 @@
       }
     },
     hint: {
-      html: 'An inspector may need to carry out a visit '
+      html: '<span class="govuk-body">An inspector will visit the appeal site to assess the development’s impact on its surroundings.<br><br>If the inspector can view the appeal site from a public road or footpath without entering your land or property, they do not need access.</span>'
     },
     items: [
       {
