--- a/app/views/appeal/full/v5/prepare-appeal/site-visibility.html
+++ b/app/views/appeal/full/v5/prepare-appeal/site-visibility.html
@@ -3,46 +3,56 @@
 {% set title = 'Will an inspector need to access your land or property?' %}
 
 {% block questions %}
-  {% set detailsHTML %}
-    {{ govukTextarea({
-      name: 'site-visibility__details',
-      id: 'site-visibility__details',
-      value: data['site-visibility__details'],
-      rows: '5',
-      label: {
-        html: 'How is visibility restricted?'
-      }
-    }) }}
-  {% endset %}
 
-  {{ govukRadios({
-    idPrefix: 'site-visibility',
-    name: 'site-visibility',
-    classes: '',
-    fieldset: {
-      legend: {
-        html: title,
-        classes: 'govuk-fieldset__legend--l',
-        isPageHeading: true
-      }
-    },
-    hint: {
-      html: '<span class="govuk-body">An inspector will visit the appeal site to assess the development’s impact on its surroundings.<br><br>If the inspector can view the appeal site from a public road or footpath without entering your land or property, they do not need access.</span>'
-    },
-    items: [
-      {
-        html: 'Yes',
-        value: 'Yes',
-        checked: checked('site-visibility','Yes')
-      },
-      {
-        html: 'No',
-        value: 'No',
-        checked: checked('site-visibility','No'),
-        conditional: {
-          html: detailsHTML
-        }
-      }
-    ]
-  }) }}
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+        <h1 class="govuk-fieldset__heading">
+          {{ title }}
+        </h1>
+      </legend>
+
+      <p class="govuk-body">
+        An inspector will visit the appeal site to assess the development’s impact on its surroundings.
+      </p>
+
+      <p class="govuk-body">
+        If the inspector can view the appeal site from a public road or footpath without entering your land or property, they do not need access.
+      </p>
+
+      {% set detailsHTML %}
+        {{ govukTextarea({
+          name: 'site-visibility__details',
+          id: 'site-visibility__details',
+          value: data['site-visibility__details'],
+          rows: '5',
+          label: {
+            html: 'How is visibility restricted?'
+          }
+        }) }}
+      {% endset %}
+      
+      {{ govukRadios({
+        name: 'site-visibility__details',
+        id: 'site-visibility__details',
+        value: data['site-visibility__details'],
+        items: [
+          {
+            html: 'Yes',
+            value: 'Yes',
+            checked: checked('site-visibility','Yes')
+          },
+          {
+            html: 'No',
+            value: 'No',
+            checked: checked('site-visibility','No'),
+            conditional: {
+              html: detailsHTML
+            }
+          }
+        ]
+      }) }}
+    </fieldset>
+  </div>
+
 {% endblock %}
