Added 'Before you start' journey that matches production

--- a/app/views/appeal/before-you-start/v16/planning/any-of-following.html
+++ b/app/views/appeal/before-you-start/v16/planning/any-of-following.html
@@ -8,7 +8,7 @@
 		Before you start
 	</span>
 	{{ govukCheckboxes({
-	  name: "countries",
+	  name: "planning-filter",
 	  fieldset: {
 	    legend: {
 	      text: title,
@@ -17,7 +17,7 @@
 	    }
 	  },
 	  hint: {
-	    text: "Select all countries that apply"
+	    text: "Select all that apply"
 	  },
 	  items: [
 	    {
