--- a/app/views/appeal/full/v5/prepare-appeal/agent-notice.html
+++ b/app/views/appeal/full/v5/prepare-appeal/agent-notice.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set back = false %}
-{% set return = false %}
+{% set back = true %}
+{% set return = true %}
 
 
 {% extends '_layouts/layout-appellant-main.html' %}
