Adding non-determined logic to HAS and S78

--- a/app/views/appeal/full/v5/check-your-answers.html
+++ b/app/views/appeal/full/v5/check-your-answers.html
@@ -496,7 +496,7 @@
                 }
               ]
             }
-          },
+          } if data['non-determined'] != 'Yes',
           {
             key: {
               text: "Planning obligation"
