HAS and S78 site Inspector access content update

--- a/app/views/appeal/full/v5/prepare-appeal/site-visibility.html
+++ b/app/views/appeal/full/v5/prepare-appeal/site-visibility.html
@@ -27,7 +27,7 @@
           value: data['site-visibility__details'],
           rows: '5',
           label: {
-            html: 'How is visibility restricted?'
+            html: '<p class="govuk-body">Enter a reason why an inspector cannot view the appeal site from a public road or footpath.</p><p class="govuk-hint">For example, the appeal site is at the rear of a terraced property.</p>'
           }
         }) }}
       {% endset %}
