Before you continue content updates and index links

--- a/app/views/appeal/full/v5/prepare-appeal/description-of-development.html
+++ b/app/views/appeal/full/v5/prepare-appeal/description-of-development.html
@@ -14,7 +14,7 @@
       isPageHeading: true
     },
     hint: {
-      text: "Enter the description of development that you submitted in your planning application."
+      text: "Enter the description of development that you submitted in your planning application. You can upload evidence of your agreement to change the description of development later."
     }
   }) }}
 
