--- a/app/views/appeal/has/index.html
+++ b/app/views/appeal/has/index.html
@@ -49,7 +49,7 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/task-list',
+      href: 'v'+version+'/before-you-continue',
       isStartButton: true
     }) }}
 
