--- a/app/views/appeal/has/v3/before-you-continue.html
+++ b/app/views/appeal/has/v3/before-you-continue.html
@@ -19,23 +19,8 @@
   </p>
 
   <p class="govuk-body">
-    You’ll need your:
+    You’ll need your planning application form.
   </p>
-
-  <ul class="govuk-list govuk-list--bullet">
-    <li>
-      planning application form
-    </li>
-    <li>
-      plans, drawings and supporting documents for your application
-    </li>
-    <li>
-      new plans or drawings to support your appeal
-    </li>
-    <li>
-      other documents to support your appeal
-    </li>
-  </ul>
 
   <p class="govuk-body">
     If you have any of the following documents, you’ll also need to upload your:
@@ -44,21 +29,6 @@
   <ul class="govuk-list govuk-list--bullet">
     <li>
       decision letter from the local authority
-    </li>
-    <li>
-      planning obligation
-    </li>
-    <li>
-      separate ownership certificate and agricultural land declaration
-    </li>
-    <li>
-      draft statement of common ground
-    </li>
-    <li>
-      appeal statement, if you have one
-    </li>
-    <li>
-      design and access statement
     </li>
     <li>
       appeal statement
