--- a/app/views/appeal/full/index.html
+++ b/app/views/appeal/full/index.html
@@ -46,7 +46,7 @@
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/task-list',
+      href: 'v'+version+'/before-you-continue',
       isStartButton: true
     }) }}
 
