--- a/app/views/appeal/full/v5/prepare-appeal/description-of-development.html
+++ b/app/views/appeal/full/v5/prepare-appeal/description-of-development.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Enter description of development' %}
+{% set title = 'Enter the description of development' %}
 
 {% block questions %}
 
