--- a/app/views/appeal/has/v3/upload-documents/description-of-development-agreement.html
+++ b/app/views/appeal/has/v3/upload-documents/description-of-development-agreement.html
@@ -7,9 +7,9 @@
     {{ title }}
   </h1>
 
-  <!-- <p class="govuk-body">
-    If you do not have your application form, you can find it by searching for your applications on your local planning authority’s website.
-  </p> -->
+  <p class="govuk-body">
+    For example, an email or letter from the local planning authority that confirms they have changed the description of development.
+  </p>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
