--- a/app/views/appeal/has/v3/upload-documents/decision-letter.html
+++ b/app/views/appeal/has/v3/upload-documents/decision-letter.html
@@ -7,7 +7,17 @@
     {{ title }}
   </h1>
 
-  <p class="govuk-body">This letter tells you about the decision on your application.</p>
+  <p class="govuk-body">
+    This letter tells you about the decision on your application.
+  </p>
+
+  <p class="govuk-body">
+    We need the letter from the local planning authority that tells you their decision on your planning application (also called a ‘decision notice’).
+  </p>
+
+  <p class="govuk-body">
+    Do not upload the planning officer’s report.
+  </p>
 
   {% set uploadHtml %}
     {{ govukFileUpload({
