--- a/app/views/appeal/full/v5/prepare-appeal/other-appeal-reference.html
+++ b/app/views/appeal/full/v5/prepare-appeal/other-appeal-reference.html
@@ -12,7 +12,7 @@
     },
     classes: "govuk-input--width-10",
     hint: {
-      html: "<span class='govuk-body'>Enter the reference number from the local planning authority.</span><br><br>For example, 0221532."
+      html: "<span class='govuk-body'>Enter the appeal reference number from the Planning Inspectorate.</span><br><br>For example, 0221532."
     },
     id: "other-appeal-reference",
     name: "other-appeal-reference",
