--- a/app/views/appeal/full/v5/upload-documents/ownership-certificate-check.html
+++ b/app/views/appeal/full/v5/upload-documents/ownership-certificate-check.html
@@ -1,24 +1,27 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Separate ownership certificate and agricultural land declaration' %}
+{% set title = 'Did you submit a separate ownership certificate and agricultural land declaration with your application?' %}
 
 {% block questions %}
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
 
-  <p class="govuk-body">The &lsquo;ownership certificate&rsquo; confirms if you own all or some of the land involved in your application. The &lsquo;agricultural land declaration&rsquo; confirms if any of the land is part of an agricultural holding.</p>
+  <p class="govuk-body">
+    You would have submitted these separately if either:
+  </p>
 
-  {# <p class="govuk-body">You would have chosen 1 of 4 options, labelled A, B, C or D.</p> #}
-
-  <p class="govuk-!-margin-bottom-2">You would have submitted these separately if either:</p>
   <ul class="govuk-list govuk-list--bullet">
-    <li>your application form did not have an ownership certificate section</li>
-    <li>your local planning authority asked for a separate document because of a mistake on your application form</li>
-    <li>you chose to submit a separate ownership certificate section</li>
+    <li>
+      your application form did not have an ownership certificate section
+    </li>
+    <li>
+      your local planning authority asked for a separate document because of a mistake on your application form
+    </li>
+    <li>
+      you chose to submit a separate ownership certificate
+    </li>
   </ul>
-
-  <p class="govuk-body">If you&rsquo;re still not sure, you can find your application on the local planning authority&rsquo;s website.</p>
 
   {{ govukRadios({
     idPrefix: 'ownership-certificate-check',
