--- a/app/views/appeal/before-you-start/v16/common/decision-date.html
+++ b/app/views/appeal/before-you-start/v16/common/decision-date.html
@@ -15,7 +15,7 @@
       }
     },
     hint: {
-      html: '<p class="govuk-body">You can find the date on the letter confirming your application</p><p class="govuk-body">For example, 31 3 2024</p>'
+      html: 'For example, 31 3 2024'
     },
     items: [
       {
@@ -35,4 +35,9 @@
       }
     ]
   }) }}
+
+  <!-- hint: {
+    html: '<p class="govuk-body">You can find the date on the letter confirming your application</p><p class="govuk-body">For example, 31 3 2024</p>'
+  }, -->
+
 {% endblock %}
