--- a/app/views/appeal/before-you-start/v16/planning/type.html
+++ b/app/views/appeal/before-you-start/v16/planning/type.html
@@ -24,36 +24,57 @@
 			{
 				html: 'Full planning',
 				value: 'Full planning',
+	      hint: {
+	        text: "Applications affecting flats, more than one house or changes of use. For example, a new building or any commercial project."
+	      },
 				checked: checked('planning-type','Full planning')
 			},
 			{
 				html: 'Householder planning',
 				value: 'Householder planning',
+	      hint: {
+	        text: "A simpler process for changes to a single house, including works within the garden. For example, small projects like extensions, conservatories or loft conversions."
+	      },
 				checked: checked('planning-type','Householder planning')
 			},
 			{
 				html: 'Outline planning',
 				value: 'Outline planning',
+	      hint: {
+	        text: "General principles of how a site can be developed."
+	      },
 				checked: checked('planning-type','Outline planning')
 			},
 			{
 				html: 'Prior approval',
 				value: 'Prior approval',
+	      hint: {
+	        text: "To accept specific parts of a development before work can start."
+	      },
 				checked: checked('planning-type','Prior approval')
 			},
 			{
 				html: 'Reserved matters',
-				value: 'Reserved matters',
+				value: 'Parts of a proposed development which you chose to not submit with your outline planning application (so they are ‘reserved’ for a later decision).',
+	      hint: {
+	        text: "Hint text here"
+	      },
 				checked: checked('planning-type','Reserved matters')
 			},
 			{
 				html: 'Removal or variation of conditions',
 				value: 'Removal or variation of conditions',
+	      hint: {
+	        text: "Planning conditions limit and control the way you must develop."
+	      },
 				checked: checked('planning-type','Removal or variation of conditions')
 			},
 	    {
 	      html: 'Something else',
 	      value: 'discontinueance notice',
+	      hint: {
+	        text: "Hint text here"
+	      },
 	      checked: checked('appeal-type','discontinueance notice')
 	    },
 	    {
@@ -62,6 +83,9 @@
 	    {
 	      html: 'I have not made a planning application',
 	      value: 'discontinueance notice',
+	      hint: {
+	        text: "Hint text here"
+	      },
 	      checked: checked('appeal-type','discontinueance notice')
 	    }
 		]
