Content updates for appeal type list + hint text

--- a/app/views/appeal/before-you-start/v16/planning/type.html
+++ b/app/views/appeal/before-you-start/v16/planning/type.html
@@ -55,9 +55,9 @@
 			},
 			{
 				html: 'Reserved matters',
-				value: 'Parts of a proposed development which you chose to not submit with your outline planning application (so they are ‘reserved’ for a later decision).',
+				value: 'Reserved matters',
 	      hint: {
-	        text: "Hint text here"
+	        text: "Parts of a proposed development which you chose to not submit with your outline planning application (so they are ‘reserved’ for a later decision)."
 	      },
 				checked: checked('planning-type','Reserved matters')
 			},
@@ -71,10 +71,7 @@
 			},
 	    {
 	      html: 'Something else',
-	      value: 'discontinueance notice',
-	      hint: {
-	        text: "Hint text here"
-	      },
+	      value: 'Something else',
 	      checked: checked('appeal-type','discontinueance notice')
 	    },
 	    {
@@ -82,11 +79,8 @@
 	    },
 	    {
 	      html: 'I have not made a planning application',
-	      value: 'discontinueance notice',
-	      hint: {
-	        text: "Hint text here"
-	      },
-	      checked: checked('appeal-type','discontinueance notice')
+	      value: 'I have not made a planning application',
+	      checked: checked('appeal-type','I have not made a planning application')
 	    }
 		]
 	}) }}
